--- a/index.html
+++ b/index.html
@@ -1,28 +1,50 @@
 <!DOCTYPE>
 <html>
-    <head>
-        <meta charset="utf-8"/>
-        <link rel="stylesheet" href="public/main.css">
-    </head>
-    <body>
-        <div class="wrapper" id="content">
+<head>
+  <meta charset="utf-8"/>
+  <link rel="stylesheet" href="public/main.css">
+</head>
+<body id="body">
 
-            <header class="header">
-                <div class="header-left"></div>
-                <div class="header-center"></div>
-                <div class="header-right"></div>
-            </header>
+<div id="sidebar">
+  <div class="todo-block">
+    <div class="todo-header">
+      <div class="todo-header-bar">
+        <button class="close-sidebar"></button>
+      </div>
+      <div class="todo-header-content">
+        <label>
+          <input id="new-todo-title" type="text" placeholder="Add title">
+        </label>
+      </div>
+    </div>
+    <ul class="todo-list" id="new-todo-items">
+      <li><label>
+        <input class="add-item-btn label" type="text" placeholder="Add to-do">
+      </label></li>
+    </ul>
+    <button class="add-btn">Add</button>
+  </div>
+</div>
 
-            <main>
-                <section class="main" id="main">
-                </section>
-            </main>
+<div class="wrapper" id="content">
 
-            <div class="add-btn-container" align="right">
-                <button class="add-list-btn"></button>
-            </div>
+  <header class="header">
+    <div class="header-left"></div>
+    <div class="header-center"></div>
+    <div class="header-right"></div>
+  </header>
 
-        </div>
-        <script type="application/javascript" src="public/main.js"></script>
-    </body>
+  <main>
+    <section class="main" id="main">
+    </section>
+  </main>
+
+  <div class="add-btn-container" align="right">
+    <button class="add-list-btn"></button>
+  </div>
+
+</div>
+<script type="application/javascript" src="public/main.js"></script>
+</body>
 </html>
