Add full realisation

--- a/index.html
+++ b/index.html
@@ -45,6 +45,6 @@
   </div>
 
 </div>
-<script type="application/javascript" src="public/main.js"></script>
+<script type="application/javascript" src="public/main-local-storage.js"></script>
 </body>
 </html>
